Improvements to APODCommand Accept 3 args for Slash Commands More descriptive error when image 404s Fix years prior to 2000